--- a/tests/ServiceStack.CefGlue.Win64.AspNetCore/ServiceStack.CefGlue.Win64.AspNetCore.csproj
+++ b/tests/ServiceStack.CefGlue.Win64.AspNetCore/ServiceStack.CefGlue.Win64.AspNetCore.csproj
@@ -20,8 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\ServiceStack.CefGlue\ServiceStack.CefGlue.csproj" />
-    <ProjectReference Include="..\..\src\ServiceStack.CefGlue.Win64\ServiceStack.CefGlue.Win64.csproj" />
+    <!--<ProjectReference Include="..\..\src\ServiceStack.CefGlue\ServiceStack.CefGlue.csproj" />-->
+    <!--<ProjectReference Include="..\..\src\ServiceStack.CefGlue.Win64\ServiceStack.CefGlue.Win64.csproj" />-->
+    <PackageReference Include="ServiceStack.CefGlue.Win64" Version="5.*" />
+
     <PackageReference Include="WinApi" Version="4.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.*" />
     <PackageReference Include="ServiceStack" Version="5.*" />
