--- a/NuGet/ServiceStack.CefGlue.Win64/servicestack.cefglue.win64.nuspec
+++ b/NuGet/ServiceStack.CefGlue.Win64/servicestack.cefglue.win64.nuspec
@@ -19,6 +19,7 @@
       <group targetFramework="netstandard2.0">
         <dependency id="System.Runtime" version="[4.3.0, )" />
         <dependency id="Microsoft.CSharp" version="[4.5.0, )" />
+        <dependency id="WinApi" version="[4.0.0, )" />
         <dependency id="ServiceStack.CefGlue" version="5.0.0" />
       </group>
     </dependencies>
