--- a/NuGet/ServiceStack.CefGlue.Win64/servicestack.cefglue.win64.nuspec
+++ b/NuGet/ServiceStack.CefGlue.Win64/servicestack.cefglue.win64.nuspec
@@ -25,7 +25,7 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="lib\**\*.*" target="lib" />
+    <file src="tools\**\*.*" target="tools" />
     <file src="..\..\src\ServiceStack.CefGlue.Win64\**\*.cs" target="src" />
   </files>
 </package>
