--- a/NuGet/ServiceStack.CefGlue.Win64/servicestack.cefglue.win64.nuspec
+++ b/NuGet/ServiceStack.CefGlue.Win64/servicestack.cefglue.win64.nuspec
@@ -21,6 +21,15 @@
         <dependency id="Microsoft.CSharp" version="[4.5.0, )" />
         <dependency id="WinApi" version="[4.0.0, )" />
         <dependency id="ServiceStack.CefGlue" version="5.0.0" />
+        <dependency id="ServiceStack" version="5.0.0" />
+        <dependency id="ServiceStack.Server" version="5.0.0" />
+        <dependency id="ServiceStack.OrmLite.Sqlite" version="5.0.0" />
+        <dependency id="ServiceStack.OrmLite.SqlServer" version="5.0.0" />
+        <dependency id="ServiceStack.OrmLite.MySql" version="5.0.0" />
+        <dependency id="ServiceStack.OrmLite.PostgreSQL" version="5.0.0" />
+        <dependency id="ServiceStack.Aws" version="5.0.0" />
+        <dependency id="ServiceStack.Azure" version="5.0.0" />
+        <dependency id="ServiceStack.Api.OpenApi" version="5.0.0" />
       </group>
     </dependencies>
   </metadata>
