--- a/NuGet/ServiceStack.CefGlue.Win64/servicestack.cefglue.win64.nuspec
+++ b/NuGet/ServiceStack.CefGlue.Win64/servicestack.cefglue.win64.nuspec
@@ -35,7 +35,7 @@
   </metadata>
   <files>
     <file src="lib\**\*.*" target="lib" />
-    <file src="tools\**\*.*" target="tools" />
+    <file src="contentFiles\**\*.*" target="contentFiles" copyToOutput="true" />
     <file src="..\..\src\ServiceStack.CefGlue.Win64\**\*.cs" target="src" />
   </files>
 </package>
