--- a/tests/ServiceStack.CefGlue.Win64.AspNetCore/ServiceStack.CefGlue.Win64.AspNetCore.csproj
+++ b/tests/ServiceStack.CefGlue.Win64.AspNetCore/ServiceStack.CefGlue.Win64.AspNetCore.csproj
@@ -11,6 +11,7 @@
     <TrimUnusedDependencies>true</TrimUnusedDependencies>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
     <RuntimeFrameworkVersion>2.1.2</RuntimeFrameworkVersion>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,9 +21,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\ServiceStack.CefGlue\ServiceStack.CefGlue.csproj" />
-    <ProjectReference Include="..\..\src\ServiceStack.CefGlue.Win64\ServiceStack.CefGlue.Win64.csproj" />
-    <!--<PackageReference Include="ServiceStack.CefGlue.Win64" Version="5.*" />-->
+    <!--<ProjectReference Include="..\..\src\ServiceStack.CefGlue\ServiceStack.CefGlue.csproj" />-->
+    <!--<ProjectReference Include="..\..\src\ServiceStack.CefGlue.Win64\ServiceStack.CefGlue.Win64.csproj" />-->
+
+    <PackageReference Include="ServiceStack.CefGlue.Win64" Version="5.*">
+      
+    </PackageReference>
 
     <PackageReference Include="WinApi" Version="4.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.*" />
