--- a/NuGet/ServiceStack.CefGlue.Win64/servicestack.cefglue.win64.nuspec
+++ b/NuGet/ServiceStack.CefGlue.Win64/servicestack.cefglue.win64.nuspec
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
+<package>
   <metadata>
     <id>ServiceStack.CefGlue.Win64</id>
     <title>ServiceStack.CefGlue.Win64</title>
@@ -32,10 +32,13 @@
         <dependency id="ServiceStack.Api.OpenApi" version="5.0.0" />
       </group>
     </dependencies>
+    <contentFiles>
+      <files include="contentFiles\**\*.*" buildAction="None" copyToOutput="true" flatten="false" />
+    </contentFiles>
   </metadata>
   <files>
     <file src="lib\**\*.*" target="lib" />
-    <file src="contentFiles\**\*.*" target="contentFiles" copyToOutput="true" />
+    <file src="contentFiles\**" target="contentFiles" />
     <file src="..\..\src\ServiceStack.CefGlue.Win64\**\*.cs" target="src" />
   </files>
 </package>
