Include favicon.ico

--- a/NuGet/ServiceStack.CefGlue.Win64/servicestack.cefglue.win64.nuspec
+++ b/NuGet/ServiceStack.CefGlue.Win64/servicestack.cefglue.win64.nuspec
@@ -33,7 +33,7 @@
       </group>
     </dependencies>
     <contentFiles>
-      <files include="contentFiles\**\*.*" buildAction="None" copyToOutput="true" flatten="false" />
+      <files include="contentFiles\**\*" buildAction="None" copyToOutput="true" flatten="false" />
     </contentFiles>
   </metadata>
   <files>
