--- a/src/ServiceStack.CefGlue.Win64/ServiceStack.CefGlue.Win64.csproj
+++ b/src/ServiceStack.CefGlue.Win64/ServiceStack.CefGlue.Win64.csproj
@@ -48,6 +48,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="favicon.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   
   <ItemGroup>
     <ProjectReference Include="..\ServiceStack.CefGlue\ServiceStack.CefGlue.csproj" />
