Update example app

--- a/tests/ServiceStack.CefGlue.Win64.AspNetCore/ServiceStack.CefGlue.Win64.AspNetCore.csproj
+++ b/tests/ServiceStack.CefGlue.Win64.AspNetCore/ServiceStack.CefGlue.Win64.AspNetCore.csproj
@@ -15,22 +15,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="favicon.ico">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.*" />
 
-  <ItemGroup>
+    <PackageReference Include="ServiceStack.CefGlue.Win64" Version="5.*" />
+
     <!--<ProjectReference Include="..\..\src\ServiceStack.CefGlue\ServiceStack.CefGlue.csproj" />-->
     <!--<ProjectReference Include="..\..\src\ServiceStack.CefGlue.Win64\ServiceStack.CefGlue.Win64.csproj" />-->
-
-    <PackageReference Include="ServiceStack.CefGlue.Win64" Version="5.*">
-      
-    </PackageReference>
-
-    <PackageReference Include="WinApi" Version="4.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.*" />
-    <PackageReference Include="ServiceStack" Version="5.*" />
+    <!--<PackageReference Include="WinApi" Version="4.0.0" />-->
+    <!--<PackageReference Include="ServiceStack" Version="5.*" />-->
   </ItemGroup>
 
 </Project>
