--- a/src/ServiceStack.CefGlue.Win64/ServiceStack.CefGlue.Win64.csproj
+++ b/src/ServiceStack.CefGlue.Win64/ServiceStack.CefGlue.Win64.csproj
@@ -15,6 +15,7 @@
       Chrome CEF Browser (Win64)
     </PackageDescription>
     <PackageTags>CEF;ServiceStack;.NET;Core;Desktop;Chromium;WebApps;CefGlue</PackageTags>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
